# lorrem-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  wsgi.py
.devcontainer/: devcontainer.json  requirements-dev.txt
.github/workflows/: cd_workflow.yml
conf/: default.conf  dev.conf
lorrem/: config.py  generator.py  quotes.py
scripts/: profile.sh
tests/: test_generator.py  test_quotes.py
