[tool.poetry]
name = "lorrem"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spacy = "^3.5.1"
markovify = "^0.9.4"
Flask = "^2.2.3"
gunicorn = "^20.1.0"
fi-core-news-md = {url = "https://github.com/explosion/spacy-models/releases/download/fi_core_news_md-3.5.0/fi_core_news_md-3.5.0-py3-none-any.whl"}
requests = "^2.28.2"
bandit = "^1.7.5"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"
requests-mock = "^1.10.0"
pytest = "^7.2.2"
black = "^23.1.0"
ruff = "^0.0.254"
setuptools = "^67.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = [
  ".git",
  ".venv",
  ".ruff_cache",
  ".devcontainer",
  "__pycache__",
  ".pytest_cache",
  ".github"
]

[tool.coverage.run]
source = ["lorrem"]
branch = true
command_line = "-m pytest"
data_file = ".coverage"

[tool.coverage.report]
fail_under = 100
skip_empty = true
skip_covered = true
sort = "-Cover"
show_missing = true

[tool.pytest.ini_options]
pythonpath = "."

[tool.bandit]
